# uqtdeployer

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: ElfAnalyzer.cpp  ElfAnalyzer.h  ElfDef.h  main.cpp
tests/: CMakeLists.txt  ElfAnalyzerTest.cpp
