CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (uqtdeployer)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

OPTION (BUILD_TESTING "Build testing" OFF)

SET (CMAKE_CXX_STANDARD 17)

ADD_SUBDIRECTORY (thirdparty)

IF (BUILD_TESTING)
    ENABLE_TESTING ()
    ADD_SUBDIRECTORY (tests tests)
ENDIF ()


SET (SOURCES
        ${SRC_DIR}/main.cpp
    )

SET (HEADERS
    )

ADD_EXECUTABLE (${PROJECT_NAME} ${SOURCES} ${HEADERS})
TARGET_INCLUDE_DIRECTORIES (${PROJECT_NAME} PRIVATE ${INCLUDE_DIR})
