CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (uqtdeployer-tests)

SET (MAIN_SRC_DIR ${CMAKE_SOURCE_DIR}/src)
SET (MAIN_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/src)
SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET (SOURCES 
        ${SRC_DIR}/tests.cpp
    )

SET (HEADERS
    )

ADD_EXECUTABLE (${PROJECT_NAME} ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} gtest gmock)
TARGET_INCLUDE_DIRECTORIES (${PROJECT_NAME} PRIVATE ${INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES (${PROJECT_NAME} PRIVATE ${MAIN_INCLUDE_DIR})

ADD_TEST (NAME uqtdeployer-tests COMMAND $<TARGET_FILE:${PROJECT_NAME}>)

ADD_CUSTOM_TARGET (JUnitTestReport
    COMMAND $<TARGET_FILE:${PROJECT_NAME}> --gtest_output="xml:$ENV{BINARY_DIR}/tests.xml"
    DEPENDS ${PROJECT_NAME}
)
